# SlicerAutoscoperM

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  SuperBuild.cmake  pyproject.toml
AutoscoperConnect/: AutoscoperConnect.py  CMakeLists.txt
AutoscoperConnect/Resources/UI/: AutoscoperConnect.ui
AutoscoperLauncher/: AutoscoperLauncher.py  CMakeLists.txt
AutoscoperLauncher/Resources/UI/: AutoscoperLauncher.ui
AutoscoperM/: AutoscoperM.py  CMakeLists.txt
AutoscoperM/AutoscoperMLib/: IO.py  RadiographGeneration.py  SubVolumeExtraction.py  Validation.py
AutoscoperM/Resources/UI/: AutoscoperM.ui
AutoscoperMockServer/: AutoscoperMockMainWindow.cpp  AutoscoperMockMainWindow.h  CMakeLists.txt  Socket.cpp  Socket.h  main.cpp
CalculateDataIntensityDensity/: CMakeLists.txt  CalculateDataIntensityDensity.py  CalculateDataIntensityDensity.xml
Hierarchical3DRegistration/: CMakeLists.txt  Hierarchical3DRegistration.py
Hierarchical3DRegistration/Hierarchical3DRegistrationLib/: TreeNode.py
Hierarchical3DRegistration/Resources/UI/: Hierarchical3DRegistration.ui
Playground/: TCP_IP_test.py
SuperBuild/: External_Autoscoper-CUDA.cmake  External_Autoscoper-OpenCL.cmake  External_Autoscoper.cmake
TrackingEvaluation/: CMakeLists.txt  TrackingEvaluation.py
TrackingEvaluation/Resources/UI/: TrackingEvaluation.ui
TrackingEvaluation/TrackingEvaluationLib/: data.py
VirtualRadiographGeneration/: CMakeLists.txt  VirtualRadiographGeneration.py  VirtualRadiographGeneration.xml
